YATC 0.9.11:
  post-install.sh:
    1. Re-design 2xclient installation.
    2. Bump 2xclient version to 3479.


  uprgade.sh:
    1. Re-design 2xclient installation.
    2. Bump 2xclient version to 3479.

YATC 0.9.10:
  yatc.py:
    1. Add 'utf8=1' option for mount.

  post-install.sh:
    1. Add extra (Russian) locale.

  uprgade.sh:
    1. Add extra (Russian) locale.

YATC 0.9.9:
  yatc.py:
    1. Mounter class added.

  post-install.sh:
    1. Switch from autofs to mounter.
    2. Link to 2xclient changed from latest to particular version.

  uprgade.sh:
    1. 2xclient upgrade added.

YATC 0.9.8:
  yatc.py:
    1. Merge dev to master.

  post-install.sh:
    1. Merge dev to master.
    2. Updating 2xclient actual version to 14.0.3213.

YATC 0.9.7:
  yatc.py:
    1. Switched from ugly error windows to pretty informational frame. It's placed right above login frame.
    2. BUG fixed: 2xclient - can't establish new connection after unsuccessful connection without reboot.
      The reason was duplication  of connection parameters in dictionary.
    3. Some new RDP errors exceptions added.

YATC 0.9.6:
  yatc.py:
    1. "Server idle timeout reached" exception handling added.

YATC 0.9.5:
  yatc.py:
    1. Stripping of string entered to login and password fields added.
    2. BUG fixed: freerdp - can't establish connection again without reboot.
      The reason was duplication  of connection parameters in dictionary.
    3. Added "Error" dialog windows after unsuccessfull RDP connection.

  post-install.sh:
    1. Amixer options changed to make Master and PCM sound louder (100%).

YATC 0.9.4:
  yatc.py:
    1. Add option to shutdown thin client if RDP not connected for some time.

YATC 0.9.3:
  post-install.sh:
    1. 2xclient source changed to vendor site URL.
    2. Added 2xclient version check. If version changed Changelog will be displayed. 
    3. Some output sugar added. 

YATC 0.9.2:
  yatc.py: